--- a/index.html
+++ b/index.html
@@ -163,6 +163,18 @@
                     <img src="./assets/images/inventory-work4.png" alt="">
                     <h3>Inventory Management System</h3>
                 </div>
+                <div class="project-images">
+                    <img src="./assets/images/website1.jpg" alt="">
+                    <h3>Cavite State University Website</h3>
+                </div>
+                <div class="project-images">
+                    <img src="./assets/images/website2.jpg" alt="">
+                    <h3>Cavite State University Website</h3>
+                </div>
+                <div class="project-images">
+                    <img src="./assets/images/pos1.png" alt="">
+                    <h3>Point of Sale system</h3>
+                </div>
             </div>
         </div>
     </section>
